RESOLVED FIXED317983
[GFC] Items with auto or calc margins are not supported
https://bugs.webkit.org/show_bug.cgi?id=317983
Summary [GFC] Items with auto or calc margins are not supported
Sammy Gill
Reported 2026-06-26 16:24:55 PDT
We currently do not support items with auto margins so we should not take GFC for those
Attachments
Radar WebKit Bug Importer
Comment 1 2026-06-26 16:25:06 PDT
Sammy Gill
Comment 2 2026-06-26 16:36:00 PDT
(or calc)
Sammy Gill
Comment 3 2026-06-26 16:52:53 PDT
EWS
Comment 4 2026-06-29 11:21:22 PDT
Committed 316050@main (3d436acad33f): <https://commits.webkit.org/316050@main> Reviewed commits have been landed. Closing PR #67986 and removing active labels.
Sammy Gill
Comment 5 2026-07-08 16:04:59 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/61175
Note You need to log in before you can comment on or make changes to this bug.